# ZeroBaseLearnAI

./: README.md  a  aa.py  untitled.md  交叉熵公式推导.md  强化学习基础篇四 基础篇总结.md  策略梯度.md  策略梯度公式推导.md
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
DeepSeek-V3-main/inference/: SDynaQ.py  Sarsa.py  Strolling.py
GpuMakeProject/: BBPE.cpp  BBPE.h  CMakeLists.txt  Decoder_Only_model3_tmp.pt  DecodersOnly.cpp  DecodersOnly.h  GpuMakeProject.cpp  GpuMakeProject.h  LoadDataset.cpp  LoadDataset.h  Tokenizer.cpp  Tokenizer.h  tangshi.data.txt
GpuMakeProject/tmpbin/head.2/: Decoder_Only_model3.pt
GpuMakeProject/tmpbin/head.2 . train.3w/: Decoder_Only_model3.pt
LibtorchNeuralNetwork2/: BBPE.cpp  BBPE.h  BPE.cpp  BPE.h  CNNExample.cpp  Decoder-Only.cpp  Embedding.cpp  HandwrittenTransformer.cpp  LibtorchNeuralNetwork2.vcxproj  LibtorchNeuralNetwork2.vcxproj.filters  RNN_Example.cpp  ResNet.cpp  Tokenizer.cpp  Tokenizer.h  TransformerTestData.cpp  TransformerTestData.h  Transformer_Attention.cpp  Transformer_Example.cpp  autograd.cpp  example-app.cpp  tangshi.data.txt
LibtorchSimpleNeuralNetwork/: CMakeLists.txt  LibtorchSimpleNeuralNetwork.cpp
LibtorchSimpleNeuralNetwork/LibtorchSimpleNeuralNetwork/: CMakeLists.txt  LibtorchSimpleNeuralNetwork.cpp  LibtorchSimpleNeuralNetwork.h
ReinforcementLearning/: ActorCritic.cpp  ActorCritic.h  CartPoleEnv.cpp  CartPoleEnv.h  CliffWalkingEnv.cpp  CliffWalkingEnv.h  DeepQNetwork.cpp  DeepQNetwork.h  DuelingDQN.cpp  DuelingDQN.h  FreeModel.cpp  FreeModel.h  PolicyIteration.cpp  PolicyIteration.h  Reinforce.cpp  Reinforce.h  ReinforcementLearning.cpp  ReinforcementLearning.sln  ReinforcementLearning.vcxproj  ReinforcementLearning.vcxproj.filters  TemporalDifference.cpp  TemporalDifference.h  pch.h
ReinforcementLearning/Hands-on-RL-main/: ActorCritic10.py  DQN7.py  DQN8 Double.py  DQN8 Dueling.py  Policy9.py  mk.py
Self-Attention-main/: My_Transformer.py
Self-Attention-main/Decoder/: My_Decoder.py
Self-Attention-main/Encoder/: My_Encoder.py
Self-Attention-main/MultiHead/: MultiHead_Attention.py
Self-Attention-main/OneHead/: self-attention.ipynb  self-attention.py
Self-Attention-main/Test/: Test.py
Self-Attention-main/Train/: Train.py
Self-Attention-main/Transformer/: My_transformer.py
Self-Attention-main/Utils/: Constants.py  DataLoader.py  __init__.py
SimpleNeuralNetwork/: SimpleNeuralNetwork.cpp  SimpleNeuralNetwork.sln  SimpleNeuralNetwork.vcxproj  SimpleNeuralNetwork.vcxproj.filters  backpropagation_demo.py  pch.h
TorchProject/: TorchProject.sln  TorchProject.vcxproj  example-app.cpp
UniversalTemplate/: UniversalTemplate.sln
UniversalTemplate/UniversalTemplate/: DecoderOnly.cpp  DecoderOnly.h  EmbeddingWithPosition.cpp  EmbeddingWithPosition.h  LogStream.cpp  TrainText.cpp  TrainText.h  UniversalTemplate.cpp  UniversalTemplate.vcxproj  UniversalTemplate.vcxproj.filters  XBBPE.cpp  XBBPE.h  XBDataset.cpp  XBDataset.h  XDecoderLayer.cpp  XDecoderLayer.h  XFeedforward.cpp  XFeedforward.h  XMultiHeadAttention.cpp  XMultiHeadAttention.h  XTrainPredict.cpp  XTrainPredict.h  pch.h
UniversalTemplate/tmpbin/: HelloWorld.txt  tangshi.data.txt
UniversalTemplateCuda/: CMakeLists.txt  DecoderOnly.cpp  DecoderOnly.h  EmbeddingWithPosition.cpp  EmbeddingWithPosition.h  LogStream.cpp  LogStream.h  TrainText.cpp  TrainText.h  UniversalTemplateCuda.cpp  UniversalTemplateCuda.h  XBBPE.cpp  XBBPE.h  XBDataset.cpp  XDecoderLayer.cpp  XDecoderLayer.h  XFeedforward.cpp  XMultiHeadAttention.cpp  XMultiHeadAttention.h  XRMSNorm.cpp  XRMSNorm.h  XRotaryEmbedding.cpp  XRotaryEmbedding.h  XTrainPredict.cpp  XTrainPredict.h  pch.h
chatgpt-main/: build_dataset.py  config.py  dataset.py  tokenizer.py  train_gpt.py  train_tokenizer.py
examples-main/language_translation/: main.py
examples-main/language_translation/src/: data.py
gym-master/.github/workflows/: build.yml  pre-commit.yml
libtorchNeuralNetwork/: libtorchNeuralNetwork.cpp  libtorchNeuralNetwork.vcxproj  libtorchNeuralNetwork.vcxproj.filters  pch.h
libtorch_cpp/custom-dataset/: custom-dataset.cpp
基于真实 Claude Code 源码的完整 Python 重实现/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MVP_FINAL_REPORT.md  MVP_PLAN.md  MVP_RELEASE.md  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_SUMMARY.md  README.md  TESTING.md  test_glm_api.py
基于真实 Claude Code 源码的完整 Python 重实现/src/: repl.py
基于真实 Claude Code 源码的完整 Python 重实现/src/providers/: anthropic_provider.py  base.py  glm_provider.py  openai_provider.py
基于真实 Claude Code 源码的完整 Python 重实现/src/repl/: core.py
基于真实 Claude Code 源码的完整 Python 重实现/tests/: test_providers.py
